--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -8,7 +8,7 @@
     <style type="text/css">
       #mainPopup {
         padding: 10px;
-        height: 270px;
+        height: 300px;
         width: 350px;
         font-family: Helvetica, Ubuntu, Arial, sans-serif;
       }
@@ -43,45 +43,56 @@
         <tr>
           <!-- option1: list of icons -->
           <td>
+        	Moods:
+            <br />
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="red frown outline icon"></i>
             </button>
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="orange meh outline icon"></i>
             </button>
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="yellow smile outline icon"></i>
             </button>
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="green beer icon"></i>
             </button>
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="blue cloud icon"></i>
             </button>
             <button class="ui icon button">
-              <i class="cloud icon"></i>
+              <i class="purple cloud icon"></i>
             </button>
           </td>
         </tr>
         <!-- option2: words -->
         <tr>
           <td>
-            <div class="ui buttons">
-              <button class="ui button">One</button>
-              <button class="ui button">Two</button>
-              <button class="ui button">Three</button>
-              <button class="ui button">four</button>
-            </div>
+            Activities:
             <br />
-            <div class="ui buttons">
-              <button class="ui button">five</button>
-              <button class="ui button">six</button>
-              <button class="ui button">seven</button>
-              <button class="ui button">eight</button>
-            </div>
+            <button class="ui icon button">
+              <i class="frown outline icon"></i>
+            </button>
+            <button class="ui icon button">
+              <i class="meh outline icon"></i>
+            </button>
+            <button class="ui icon button">
+              <i class="smile outline icon"></i>
+            </button>
+            <button class="ui icon button">
+              <i class="beer icon"></i>
+            </button>
+            <button class="ui icon button">
+              <i class="cloud icon"></i>
+            </button>
+            <button class="ui icon button">
+              <i class="cloud icon"></i>
+            </button>
           </td>
         </tr>
       </table>
+
+      <br />
     </div>
   </body>
   <script
