Update button color and icons

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -43,50 +43,50 @@
         <tr>
           <!-- option1: list of icons -->
           <td>
-        	Moods:
+            Moods
             <br />
-            <button class="ui icon button">
-              <i class="red frown outline icon"></i>
+            <button class="ui orange icon button">
+              <i class="smile outline icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="orange meh outline icon"></i>
+            <button class="ui green icon button">
+              <i class="meh outline icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="yellow smile outline icon"></i>
+            <button class="ui purple icon button">
+              <i class="frown outline icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="green beer icon"></i>
+            <button class="ui yellow icon button">
+              <i class="child icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="blue cloud icon"></i>
+            <button class="ui red icon button">
+              <i class="bed icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="purple cloud icon"></i>
+            <button class="ui blue icon button">
+              <i class="user secret icon"></i>
             </button>
           </td>
         </tr>
         <!-- option2: words -->
         <tr>
           <td>
-            Activities:
+            Activities
             <br />
-            <button class="ui icon button">
-              <i class="frown outline icon"></i>
+            <button class="ui blue icon button">
+              <i class="utensils icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="meh outline icon"></i>
+            <button class="ui red icon button">
+              <i class="motorcycle icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="smile outline icon"></i>
+            <button class="ui yellow icon button">
+              <i class="git icon"></i>
             </button>
-            <button class="ui icon button">
+            <button class="ui purple icon button">
               <i class="beer icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="cloud icon"></i>
+            <button class="ui green icon button">
+              <i class="flask icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="cloud icon"></i>
+            <button class="ui orange icon button">
+              <i class="book icon"></i>
             </button>
           </td>
         </tr>
