--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -28,7 +28,7 @@
           <td id="here">
             <iframe
               id="iframe"
-              src="https://open.spotify.com/embed/playlist/1UPD2woITdKDVExyKDIBFB"
+              src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M"
               width="350"
               height="80"
               frameborder="0"
@@ -43,28 +43,28 @@
             <div class="heading">Moods</div>
             <br />
             <!-- we need to add id for each buttons -->
-            <button class="ui icon button" id="first">
-              <i class="red frown outline icon"></i>
+            <button class="ui yellow icon button" id="first">
+              <i class="smile outline icon"></i>
             </button>
-            <button class="ui icon button" id="second">
-              <i class="orange meh outline icon"></i>
+            <button class="ui green icon button" id="second">
+              <i class=" meh outline icon"></i>
             </button>
-            <button class="ui icon button" id="third">
-              <i class="yellow smile outline icon"></i>
+            <button class="ui red icon button" id="third">
+              <i class="frown outline icon"></i>
             </button>
-            <button class="ui icon button" id="four">
-              <i class="green beer icon"></i>
+            <button class="ui pink icon button" id="fourth">
+              <i class="heart outline icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="blue cloud icon"></i>
+            <button class="ui purple icon button" id="fifth">
+              <i class="bed icon"></i>
             </button>
-            <button class="ui icon button">
-              <i class="purple cloud icon"></i>
+            <button class="ui blue icon button" id= "sixth">
+              <i class="glass martini icon"></i>
             </button>
           </td>
         </tr>
         <!-- option2: words -->
-        <tr>
+        <!-- <tr>
           <td>
             <div class="heading">Activities</div>
             <br />
@@ -87,7 +87,7 @@
               <i class="cloud icon"></i>
             </button>
           </td>
-        </tr>
+        </tr> -->
       </table>
     </div>
     <script
